<resources>
    <string name="app_name">Project_2_Part_3</string>

    <string name="main_menu_title">Otter Library System</string>
    <string name="create_account_button">Create Account</string>
    <string name="place_hold_button">Place Hold</string>
    <string name="cancel_hold_button">Cancel Hold</string>
    <string name="manage_system_button">Manage System</string>

    <string name="create_account_title">Create an Account</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>

    <string name="place_hold_title">Place Hold</string>
    <string name="pickupDate">Pickup Date </string>
    <string name="returnDate">Return Date </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="submit">Submit</string>

    <string name="place_hold_book_selection_title">Select Book</string>
    <string name="cancel_hold_selection_title">Select Hold</string>
    <string name="login_title">Login</string>

    <string name="date_format">Date: yyyy-mm-dd hh:mm</string>
    <string name="cancel_hold">Cancel Hold</string>
    <string name="manage_system">Manage System</string>
    <string name="date_format_info">[Dates: yyyy-mm-dd] [Times (24hr): hh:mm:ss]</string>
    <string name="logs">Logs:</string>
    <string name="addBook">Add New Book</string>
    <string name="resetDatabase">Reset Database</string>

    <string name="book_title">Title: </string>
    <string name="book_author">Author: </string>
    <string name="book_isbn">ISBN: </string>
    <string name="book_hourly_fee">Hourly Fee: $</string>
</resources>
