<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:android1="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">
    tools:context="will6366.project_2_part_3.MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_title"
        android:layout_marginBottom="40dp"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button"/>

    <Button
        android:id="@+id/place_hold_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_hold_button"/>

    <Button
        android:id="@+id/cancel_hold_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_hold_button"/>

    <Button
        android:id="@+id/manage_system_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_system_button"/>

</LinearLayout>
