<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="will6366.project_2_part_3.ManageSystem">
    <!--android:weightSum="1"-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_system"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logs"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"/>

    <!-- Display Log Data-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="8dp"
        android:background="@drawable/my_border">

        <TextView
            android:id="@+id/manage_system_log_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetDatabase"
            android:onClick="resetDatabase"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addNewBook"
            android:text="@string/addBook"/>
    </LinearLayout>

</LinearLayout>
